<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/black">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="189dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/large_app_image"
        android:scaleType="fitStart"
        android:src="@drawable/quick_alert2x" />

    <TextView
        android:id="@+id/login_instruction_textView"
        style="@style/textView_style.small"
        android:textSize="22sp"
        android:text="@string/enter_your_phone_number"
        android:paddingBottom="16dp"
        android:paddingTop="30dp"/>

    <LinearLayout
        android:id="@+id/verification_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/first_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#A1887F"
                android:textSize="25sp"
                android:textColor="@color/black"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/second_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#A1887F"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/third_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#A1887F"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/fourth_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#A1887F"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/fifth_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textColorHint="#A1887F"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/sixth_digit_et"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/frame_border"
                android:hint="@string/zero"
                android:textColor="@color/black"
                android:textColorHint="#A1887F"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="25sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/verifyCode_button"
            android:layout_width="266dp"
            android:layout_height="90dp"
            android:background="@color/black"
            android:contentDescription="@string/continue_text"
            android:paddingTop="16dp"
            android:scaleType="fitStart"
            android:src="@drawable/login_button" />

        <TextView
            style="@style/textView_style.small"
            android:text="@string/reEnterPhoneNumber"/>

        <Button
            android:id="@+id/goBack_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/gray"
            android:text="@string/go_back"
            android:textColor="@color/dark_black"
            android:textStyle="italic"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <EditText
        android:id="@+id/phoneNumber_editText"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rounded_text_box"
        android:hint="@string/phoneNumber_placeholder"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="25sp"
        android:visibility="visible"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/toVerify_button"
        android:layout_width="266dp"
        android:layout_height="90dp"
        android:background="@color/black"
        android:contentDescription="@string/continue_text"
        android:paddingTop="20dp"
        android:scaleType="fitStart"
        android:src="@drawable/login_button"
        android:visibility="visible"/>

</LinearLayout>